@@ -874,9 +874,7 @@
             unconditionally; if # is negative (-1), it simply records the current time as
             the time of the last update.&nbsp; In order for the time interval to be kept 
             track of between runs of the program, the property IgnoreShortTermCals must not 
-            be set.  This command is available on a K3 with GMS 3.31 or higher.  With a K3,
-            the Record exposure time will be used unless the property K3HWDarkRefExposure
-            is set with a positive value.</TD>
+            be set.  This command is available on a K3 with GMS 3.31 or higher.</TD>
         </TR>
         <TR vAlign="top">
           <TD class="style8">AlignWholeTSOnly [#]</TD>
